# my_cookicutter_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_dir}}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.project_dir}}/rust/: Cargo.toml  pyproject.toml
{{cookiecutter.project_dir}}/rust/src/: lib.rs
